<resources>

    <string name="app_Name">MiCaja+</string>
    <string name="calendario_Txt">DD/MM/AAAA</string>
    <string name="buscar">Buscar...</string>
    <string name="categoria">Categoría a Agregar</string>
    <string name="cedula">Cédula</string>
    <string name="click_Registro">REGISTRARSE</string>
    <string name="consultar_Operaciones">CONSULTAR ESTADO DE LA TIENDA</string>
    <string name="consultarXFecha">Establece un período de tiempo</string>
    <string name="Documento">N.º Documento</string>
    <string name="fecha">Fecha</string>
    <string name="graf_Creditos">Gráfica de créditos</string>
    <string name="graf_Costos">Gráfica de costos</string>
    <string name="graf_Gastos">Gráfica de gastos</string>
    <string name="graf_Ventas">Gráfica de Ventas</string>
    <string name="hint_costos">Costos $</string>
    <string name="hint_gastos">Gastos $</string>
    <string name="hint_ventas">Ventas $</string>
    <string name="hint_fiados">Total de clientes que te deben:</string>
    <string name="ic_Candado">Número de teléfono</string>
    <string name="ic_Cedula">Documento de identidad</string>
    <string name="ic_Retroceder">Ícono de retroceso</string>
    <string name="logo_App">Logo de MiCaja+</string>
    <string name="loguearse">INICIAR SESIÓN</string>
    <string name="mi_Caja">MICAJA</string>
    <string name="plus">+</string>
    <string name="pregunta">¿Aún no tienes cuenta?</string>
    <string name="producto">"Producto a Agregar "</string>
    <string name="rango_fecha"> oct 31 2025 - nov 31 2025  </string>
    <string name="registrarse">REGISTRARME</string>
    <string name="telefono">N.º de teléfono</string>
    <string name="titulo_Agregar">Agregar Producto</string>
    <string name="txt_Reporte">REPORTES</string>
    <string name="txt_Venta_itm">Ventas</string>
    <string name="app_name">MiCaja+</string>
    <string name="txtTienda">Chat</string>

    <string name="tituloCredito">Créditos</string>
    <string name="txtCredito">Lista de Créditos</string>
    <string name="txtBalance">Consultar Balance</string>
    <string name="nombreCompleto">Nombre</string>
    <string name="valor">Valor</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="ganancias">Ganancias:</string>
    <string name="gastos">Gastos:</string>
    <string name="ventas">Ventas:</string>
    <string name="costos">Costos:</string>
    <string name="NombreTendero">Nombre</string>
    <string name="ResumenDia">Resumen Del Día</string>
    <string name="abono">Abono</string>
</resources>