<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#F0ECFA"
    tools:context=".Registro"
    android:fitsSystemWindows="true">

    <ImageButton
        android:id="@+id/btnRetroceso"
        android:layout_width="76dp"
        android:layout_height="76dp"
        android:src="@drawable/retroceso"
        android:backgroundTint="@color/color_ic_retroceso"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toStartOf="@id/logoApp"
        app:layout_constraintBottom_toTopOf="@id/logoApp"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintVertical_bias="0.0"
        android:contentDescription="@string/ic_Retroceder"
        />

    <ImageView
        android:id="@+id/logoApp"
        android:layout_width="220dp"
        android:layout_height="174dp"
        android:layout_marginTop="36dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:src="@drawable/logo_app"
        android:contentDescription="@string/logo_App"
        android:scaleType="centerInside"
        />

    <TextView
        android:id="@+id/appName"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="12dp"
        app:layout_constraintTop_toBottomOf="@id/logoApp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:text="@string/mi_Caja"
        android:textSize="32sp"
        android:textColor="@color/color_txt_app"
        android:textStyle="bold"
        />

    <TextView
        android:id="@+id/plus"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="5dp"
        app:layout_constraintBaseline_toBaselineOf="@id/appName"
        app:layout_constraintStart_toEndOf="@id/appName"
        android:text="@string/plus"
        android:textSize="26sp"
        android:textStyle="bold"
        android:textColor="@color/plus"
        />

    <TextView
        android:id="@+id/NombreText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        app:layout_constraintTop_toBottomOf="@id/appName"
        app:layout_constraintStart_toStartOf="@id/inputNombre"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        android:text="@string/NombreTendero"
        android:textColor="@color/ttl_campos"
        android:textSize="17sp"
        />

    <EditText
        android:id="@+id/inputNombre"
        android:layout_width="300dp"
        android:layout_height="53dp"
        android:background="@drawable/bg_input_rounded"
        android:layout_marginTop="8dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/NombreText"
        android:textColor="@color/color_campos"
        android:inputType="text"
        android:textSize="14sp"
        android:textAlignment="center"
        android:autofillHints="name"
        android:textStyle="bold"
        />

    <ImageView
        android:id="@+id/ic_Usuario"
        android:layout_width="27dp"
        android:layout_height="27dp"
        android:src="@drawable/ic_circle"
        android:layout_marginStart="16dp"
        app:layout_constraintTop_toTopOf="@+id/inputNombre"
        app:layout_constraintStart_toStartOf="@id/inputNombre"
        app:layout_constraintBottom_toBottomOf="@id/inputNombre"
        android:contentDescription="@string/ic_Cedula"
        />


    <TextView
        android:id="@+id/cedulaText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        app:layout_constraintTop_toBottomOf="@id/inputNombre"
        app:layout_constraintStart_toStartOf="@id/inputCedula"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        android:text="@string/cedula"
        android:textColor="@color/ttl_campos"
        android:textSize="17sp"
        />

    <EditText
        android:id="@+id/inputCedula"
        android:layout_width="300dp"
        android:layout_height="53dp"
        android:background="@drawable/bg_input_rounded"
        android:layout_marginTop="8dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/cedulaText"
        android:textColor="@color/color_campos"
        android:inputType="phone"
        android:autofillHints="phone"
        android:textSize="14sp"
        android:textAlignment="center"
        android:textStyle="bold"
        />

    <ImageView
        android:id="@+id/ic_Cedula"
        android:layout_width="24dp"
        android:layout_height="24dp"
        android:src="@drawable/ic_cedula"
        android:layout_marginStart="16dp"
        app:layout_constraintTop_toTopOf="@id/inputCedula"
        app:layout_constraintStart_toStartOf="@id/inputCedula"
        app:layout_constraintBottom_toBottomOf="@id/inputCedula"
        android:contentDescription="@string/ic_Cedula"
        />

    <TextView
        android:id="@+id/telefonoText"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        app:layout_constraintStart_toStartOf="@id/inputCedula"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/inputCedula"
        android:text="@string/telefono"
        android:textColor="@color/ttl_campos"
        android:textSize="17sp"
        />

    <EditText
        android:id="@+id/inputTelefono"
        android:layout_width="300dp"
        android:layout_height="58dp"
        android:background="@drawable/bg_input_rounded"
        android:layout_marginTop="8dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/telefonoText"
        android:inputType="numberPassword"
        android:autofillHints="phone"
        android:textAlignment="center"
        android:textColor="@color/color_campos"
        android:textSize="14sp"
        android:textStyle="bold"
        />

    <ImageView
        android:id="@+id/ic_Telefono"
        android:layout_width="24dp"
        android:layout_height="24dp"
        android:src="@drawable/ic_candado"
        android:layout_marginStart="16dp"
        app:layout_constraintTop_toTopOf="@id/inputTelefono"
        app:layout_constraintStart_toStartOf="@id/inputTelefono"
        app:layout_constraintBottom_toBottomOf="@id/inputTelefono"
        android:contentDescription="@string/ic_Candado"
        />

    <Button
        android:id="@+id/btnRegistrar"
        android:layout_width="205dp"
        android:layout_height="64dp"
        android:backgroundTint="@color/btn_registrarse"
        android:padding="8dp"
        android:layout_margin="32dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/inputTelefono"
        android:textColor="#FFFFFF"
        android:text="@string/registrarse"
        android:textSize="19sp"
        />

</androidx.constraintlayout.widget.ConstraintLayout>