<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".fragments.FragmentAnadirProductos">

        <ImageView
            android:id="@+id/btnCerrar"
            android:layout_width="40dp"
            android:layout_height="40dp"
            android:src="@drawable/ic_cerrar"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            android:layout_margin="15dp"/>

        <TextView
            android:id="@+id/tituloInsertar"
            android:layout_width="230dp"
            android:layout_height="wrap_content"
            android:text="@string/titulo_Agregar"
            android:textSize="25sp"
            android:textStyle="bold"
            android:textAlignment="center"
            android:layout_marginTop="15dp"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintStart_toEndOf="@id/btnCerrar"
            app:layout_constraintEnd_toStartOf="@+id/btGuardar"
            android:layout_marginStart="20dp"/>

        <ImageView
            android:id="@+id/btGuardar"
            android:layout_width="40dp"
            android:layout_height="40dp"
            android:src="@drawable/ic_aceptar"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintStart_toEndOf="@id/tituloInsertar"
            app:layout_constraintEnd_toEndOf="parent"
            android:layout_margin="15dp" />

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/layoutCategorias"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toBottomOf="@id/tituloInsertar"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginTop="16dp"
            android:layout_marginHorizontal="16dp">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/Ivcategorias"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/categoria" />
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/layoutProductos"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toBottomOf="@id/layoutCategorias"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginTop="8dp"
            android:layout_marginHorizontal="16dp">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/Ivproductos"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/producto" />
        </com.google.android.material.textfield.TextInputLayout>

</androidx.constraintlayout.widget.ConstraintLayout>